[bug] fix overflow styling to prevent scroll

--- a/pandemic-ui/src/css/Navigation.css
+++ b/pandemic-ui/src/css/Navigation.css
@@ -3,6 +3,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
+  box-sizing: border-box;
   width: 100%;
 }
 
